--- a/05-estatico/website/index.html
+++ b/05-estatico/website/index.html
@@ -1,11 +1,6 @@
 <head>
-
-<title>Test website</title>
-
+  <title>Test</title>
 </head>
-
 <body>
-
-<h1>This is a test website</h1>
-
+  <h1>Esto es una prueba</h1>
 </body>
