--- a/05-estatico/website/index.html
+++ b/05-estatico/website/index.html
@@ -1,6 +1,8 @@
-<head>
-  <title>Test</title>
-</head>
-<body>
-  <h1>Esto es una prueba</h1>
-</body>
+<html>
+  <head>
+    <title>Test</title>
+  </head>
+  <body>
+    <h1>Esto es una prueba</h1>
+  </body>
+</html>
